# dcheck-er

./: .gitignore  README.md  io.py  pyproject.toml  runner.py  serializer.py  spec.py
dcheck_enterprise_runner/: __init__.py  runner.py
tests/: test_contract_input.py  test_contract_output.py
